Added solutions to select exercises from Chapter 3

--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,14 @@
   address   = {New York},
   isbn      = {978-0-387-94268-1}
 }
+
+@book{CourseArithmetic,
+  author    = {Jean-Pierre Serre},
+  title     = {A Course in Arithmetic},
+  series    = {Graduate Texts in Mathematics},
+  volume    = {7},
+  publisher = {Springer-Verlag},
+  address   = {New York},
+  year      = {1973},
+  isbn      = {0-387-90040-3}
+}
